# book-shelf

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/agents/: code-explainer.md  feature-implementer.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-ci.yml
.steering/20260613-initial-implementation/: design.md  requirements.md  tasklist.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26bb49e77b83_create_initial_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  books.py  tags.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  book.py  tag.py  user.py
backend/app/schemas/: book.py  tag.py  user.py
backend/app/services/: auth_service.py  book_service.py  tag_service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_books.py  test_tags.py
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/pages/BookCreatePage/: BookCreatePage.tsx
frontend/src/pages/BookDetailPage/: BookDetailPage.tsx
frontend/src/pages/BookEditPage/: BookEditPage.tsx
frontend/src/pages/BookListPage/: BookListPage.tsx
frontend/src/pages/LoginPage/: LoginPage.tsx
frontend/src/pages/RegisterPage/: RegisterPage.tsx
frontend/src/pages/TagManagePage/: TagManagePage.tsx
