[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.136.3",
    "passlib>=1.7.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

# ruff: 高速なPython用リンター/フォーマッター（flake8やisortなどを置き換える）
[tool.ruff]
# 1行あたりの最大文字数。これを超える行は警告対象になる。
line-length = 100

[tool.ruff.lint]
# 有効にするルールセット（チェック項目のグループ）を指定する。
#   E: pycodestyle（PEP8のコーディングスタイル）のエラー
#   F: pyflakes（未使用の変数・import、構文ミスなど）
#   I: isort（importの並び順・グループ化）
#   UP: pyupgrade（古い書き方を新しいPython構文に置き換える提案。例: typingの古い書き方など）
#   B: flake8-bugbear（バグになりやすい・分かりにくいコードパターンの検出）
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# flake8-bugbearには「関数のデフォルト引数にミュータブル(可変)な値や関数呼び出しを書くな」という
# ルール(B008)があるが、FastAPIのDepends/Query/Path/Bodyはデフォルト引数として使うのが正しい使い方。
# そのため、これらの呼び出しは「ミュータブルなデフォルト引数」の警告対象から除外する。
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
